# nordic_portfolio

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: AVANZA_MCP.md
infra/terraform/: cloud-init.yaml.tftpl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: check-prereqs.sh  local-setup.sh  set-key-vault-secret.sh
src/nordic_portfolio_mcp/: __init__.py  check.py  configure.py  credentials.py  errors.py  gateway.py  normalize.py  rebalance.py  server.py  service.py
tests/: test_gateway.py  test_normalize.py  test_rebalance.py
