[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "nordic-portfolio-mcp"
version = "0.1.0"
description = "Read-only MCP integration for private Avanza portfolio analysis"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "avanza-api==16.1.0",
  "keyring>=25.6,<26",
  "mcp[cli]>=1.28.1,<2",
]

[project.scripts]
nordic-avanza-mcp = "nordic_portfolio_mcp.server:main"
nordic-avanza-configure = "nordic_portfolio_mcp.configure:main"
nordic-avanza-check = "nordic_portfolio_mcp.check:main"

[dependency-groups]
dev = [
  "pytest>=8.4,<9",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nordic_portfolio_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

